feat: Add platform attach functionality to attach player to moving platforms

--- a/Relativity Reloaded/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/Relativity Reloaded/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -194,12 +194,12 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastPivotPosition",
-                "value": "{\"m_Value\":{\"x\":2.1555680973506242e-7,\"y\":9.380576670992014e-8,\"z\":-3.9738662138688599e-8}}"
+                "value": "{\"m_Value\":{\"x\":0.0,\"y\":0.0,\"z\":0.0}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":30.218040466308595,\"y\":-2.671098232269287,\"z\":148.79483032226563}}"
+                "value": "{\"m_Value\":{\"x\":5.0,\"y\":1.0,\"z\":5.0}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
